--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -49,7 +49,7 @@
                                     <div class="form-group">
                                         <label>
                                             <input type="checkbox" name="rocketchat" value="true" {{#inArray "rocketChat" ../school.features}}checked{{/inArray}}>
-                                            Aktivierung des Messengers erlauben.
+                                            Freischaltung des Messengers für einzelne Bereiche zulassen
                                         </label>
                                     </div>
 
