--- a/views/teams/edit-team.hbs
+++ b/views/teams/edit-team.hbs
@@ -36,7 +36,7 @@
                     <div class="form-group">
                         <label>
                             <input type="checkbox" name="rocketchat" value="true" {{#inArray "rocketChat" ../team.features}}checked{{/inArray}}>
-                            Messengers für Team aktivieren
+                            Messenger für Team aktivieren
                         </label>
                     </div>
                 {{/inArray}}
