--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -89,7 +89,8 @@
                                     data-method="delete"
                                     title="Ordner löschen"
                                     data-file-name="{{../this.name}}"
-                                    data-file-key="{{../this.path}}">
+									data-file-id="{{../this._id}}"
+                                    >
                                         <i class="fa fa-trash-o pull-right"></i>
                                     </a>
 
@@ -240,7 +241,7 @@
                             <i class="fa fa-trash-o"></i> Löschen
                         </button>
                 {{/content}}
-            {{/embed}}            
+            {{/embed}}
         </section>
     </div>
 
