--- a/static/styles/account/settings.scss
+++ b/static/styles/account/settings.scss
@@ -1,7 +1,7 @@
 @import '../lib/colors';
 @import '../lib/bootstrap/scss/bootstrap-flex';
 
-.notification-div {
+.notification-settings {
   padding-top: 20px;
 }
 
