--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -44,25 +44,6 @@
         </div>
 
         <div class="form-group">
-            <label>Aktuelles Passwort: <sup>*</sup></label>
-            <input type="password" name="password" class="form-control" placeholder="***************" required>
-        </div>
-
-        {{#userHasPermission "PASSWORD_EDIT"}}
-        <div class="form-group">
-            <label>Neues Passwort:</label>
-            <input type="password" name="password_new" id="password_new" class="form-control" placeholder="***************"
-                pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="{{> "lib/forms/password-hint" plaintext=true}}">
-        </div>
-
-        <div class="form-group">
-            <label>Neues Passwort wiederholen:</label>
-            <input type="password" name="password_control" id="password_control" class="form-control" placeholder="***************"
-                title="{{> "lib/forms/password-hint" plaintext=true}}">
-        </div>
-        {{/userHasPermission}}
-
-        <div class="form-group">
             <label>Aktuelles Passwort</label>
             <input type="password" name="password" class="form-control" placeholder="***************" required>
         </div>
@@ -70,8 +51,10 @@
         {{#userHasPermission "PASSWORD_EDIT"}}
         <div class="form-group">
             <label>Neues Passwort <sup>*</sup></label>
-            <input type="password" name="password_new" id="password_new" class="form-control" placeholder="***************"
-                pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen">
+            <input type="password" name="password_new" id="password_new" class="form-control"
+                placeholder="***************"
+                pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+                title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen">
         </div>
 
         <span class="hint">
@@ -94,43 +77,45 @@
 </span>
 </div>
 
-<div class="notification-div">
-    <div class="panel panel-default">
-        <div class="panel-heading">
+{{#userHasPermission "NOTIFICATION_VIEW"}}
+<div class="notification-settings">
+    <div class="row">
+        <div class="col-sm-9">
             <h4 class="panel-title">Benachrichtigungseinstellungen</h4>
         </div>
-        <div class="notification">
-            <div class="row-push-loading">
-                <div class="row">
-                    <div class="col-sm"><i class="fa fa-spinner fa-spin"></i></div>
-                </div>
-            </div>
+    </div>
+    <div class="notification">
+        <div class="row-push-loading">
             <div class="row">
-                <div class="col-sm btn-push-disabled hidden">
-                    <button type="button" class="btn btn-default btn-block btn-device" onclick="requestPushPermission()">
-                        <i class="fa fa-bell" aria-hidden="true"></i>
-                        Benachrichtigungen
-                        aktivieren
-                    </button>
-                </div>
-                <div class="col-sm btn-push-enabled hidden">
-                    <button type="button" class="btn btn-default btn-block btn-device" onclick="requestDisablePush()">
-                        <i class="fa fa-bell-slash" aria-hidden="true"></i>
-                        Benachrichtigungen
-                        deaktivieren
-                    </button>
-                </div>
-                <div class="col-sm btn-push-enabled hidden">
-                    <button type="button" class="btn btn-default btn-block send-test-notification">
-                        <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                        Test-Benachrichtigung
-                        senden
-                    </button>
-                </div>
+                <div class="col-sm"><i class="fa fa-spinner fa-spin"></i></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm btn-push-disabled hidden">
+                <button type="button" class="btn btn-default btn-block btn-device" onclick="requestPushPermission()">
+                    <i class="fa fa-bell" aria-hidden="true"></i>
+                    Benachrichtigungen
+                    aktivieren
+                </button>
+            </div>
+            <div class="col-sm btn-push-enabled hidden">
+                <button type="button" class="btn btn-default btn-block btn-device" onclick="requestDisablePush()">
+                    <i class="fa fa-bell-slash" aria-hidden="true"></i>
+                    Benachrichtigungen
+                    deaktivieren
+                </button>
+            </div>
+            <div class="col-sm btn-push-enabled hidden">
+                <button type="button" class="btn btn-default btn-block send-test-notification">
+                    <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                    Test-Benachrichtigung
+                    senden
+                </button>
             </div>
         </div>
     </div>
 </div>
+{{/userHasPermission}}
 
 {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
 {{#content "body"}}
