--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -9,7 +9,7 @@
                 <span> - </span>
                 <a href="/impressum#data_security" target="_blank">Datenschutzerklärung</a>
                 <span> - </span>
-                <a href="mailto:hpi-info@hpi.de?subject=Schul_Cloud%20Anfrage" target="_blank">Kontakt</a>
+                <a href="mailto:info@schul-cloud.org?subject=Schul_Cloud%20Anfrage" target="_blank">Kontakt</a>
                 <span> - </span>
                 <a href="/team" target="_blank">Team</a>
                 <span> - </span>
