--- a/views/account/settings.hbs
+++ b/views/account/settings.hbs
@@ -1,6 +1,6 @@
 {{#extend "lib/loggedin"}}
 {{#content "styles" mode="append"}}
-<link rel="stylesheet" href="/styles/account/settings.css" />
+<link rel="stylesheet" href="/styles/account/settings.css"/>
 {{/content}}
 
 {{#content "scripts" mode="append"}}
@@ -26,51 +26,55 @@
         </div>
         {{/ifneq}}
 
-        <div class="form-group">
-            <span><Label>Geschlecht:</Label>
-                <p class="text-muted" style="display: inline"> (optional)</p>
-            </span>
-            <select class="form-control form-control-lg" type="text" name="gender">
-                <option value="">Geschlecht auswählen</option>
-                <option {{#ifeq currentUser.gender "male"}} selected{{/ifeq}} value="male">Männlich</option>
-                <option {{#ifeq currentUser.gender "female"}} selected{{/ifeq}} value="female">Weiblich</option>
-                <option {{#ifeq currentUser.gender "other"}} selected{{/ifeq}} value="other">Anderes</option>
-            </select>
-        </div>
+    <div class="form-group">
+        <span><Label>Geschlecht:</Label><p class="text-muted" style="display: inline"> (optional)</p></span>
+        <select class="form-control form-control-lg" type="text" name="gender">
+            <option value="">Geschlecht auswählen</option>
+            <option {{#ifeq currentUser.gender "male"}}selected{{/ifeq}} value="male">Männlich</option>
+            <option {{#ifeq currentUser.gender "female"}}selected{{/ifeq}} value="female">Weiblich</option>
+            <option {{#ifeq currentUser.gender "other"}}selected{{/ifeq}} value="other">Anderes</option>
+        </select>
+    </div>
+    
+    <div class="form-group">
+        <label>E-Mail-Adresse:</label>
+        <input type="email" class="form-control" name="email" value="{{ currentUser.email }}">
+    </div>
 
         <div class="form-group">
-            <label>E-Mail-Adresse:</label>
-            <input type="email" class="form-control" name="email" value="{{ currentUser.email }}">
-        </div>
-
-        <div class="form-group">
-            <label>Aktuelles Passwort</label>
-            <input type="password" name="password" class="form-control" placeholder="***************" required>
+            <label>Aktuelles Passwort: <sup>*</sup></label>
+            <input type="password" name="password" class="form-control"
+                   placeholder="***************" required>
         </div>
 
         {{#userHasPermission "PASSWORD_EDIT"}}
         <div class="form-group">
-            <label>Neues Passwort <sup>*</sup></label>
+            <label>Neues Passwort:</label>
             <input type="password" name="password_new" id="password_new" class="form-control"
                 placeholder="***************"
                 pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
-                title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen">
+                title="{{> "lib/forms/password-hint" plaintext=true}}">
         </div>
 
-        <span class="hint">
-            <span class="star-reference">*</span>
-            {{> "lib/forms/password-hint" plaintext=false style="display: inline;"}}
-        </span>
-</div>
-{{/userHasPermission}}
+        <div class="form-group">
+            <label>Neues Passwort wiederholen:</label>
+            <input type="password" name="password_control" id="password_control"
+                           class="form-control" placeholder="***************"
+                           title="{{> "lib/forms/password-hint" plaintext=true}}">
+        </div>
+        {{/userHasPermission}}
 
-<div class="form-group">
-    <input type="submit" class="btn btn-primary" />
-</div>
-</form>
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary"/>
+        </div>
+    </form>
 
-<input type="hidden" name="userId" value="{{userId}}" />
+    <input type="hidden" name="userId" value="{{userId}}"/>
 
+    <span class="hint">
+        <span class="star-reference">*</span>
+        {{> "lib/forms/password-hint" plaintext=false style="display: inline;"}}
+    </span>
 </div>
 
 {{#userHasPermission "NOTIFICATION_VIEW"}}
