update headline class

--- a/views/account/notification.hbs
+++ b/views/account/notification.hbs
@@ -1,6 +1,6 @@
 {{#userHasPermission "NOTIFICATION_VIEW"}}
 <div class="notification-settings">
-	<h4 class="panel-title">Benachrichtigungseinstellungen</h4>
+	<h4>Benachrichtigungseinstellungen</h4>
 	<div class="notification">
 		<div class="row-push-loading row">
 			<div class="col-md-12">
