added firebase to vendors-optimized

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -17,8 +17,8 @@
 {{/content}}
 
 {{#content "scripts" mode="append"}}
-<script type="text/javascript" src="/vendor-optimized/firebasejs/4.8.1/firebase-app.js" defer></script>
-<script type="text/javascript" src="/vendor-optimized/firebasejs/4.8.1/firebase-messaging.js" defer></script>
+<script type="text/javascript" src="/vendor-optimized/firebase/firebase-app.js" defer></script>
+<script type="text/javascript" src="/vendor-optimized/firebase/firebase-messaging.js" defer></script>
 <script type="text/javascript" src="/vendor-optimized/mathjax/MathJax.js?config=TeX-AMS_HTML" defer></script>
 <script type="text/javascript" src="/vendor-optimized/izitoast/dist/js/iziToast.min.js" defer></script>
 <script type="text/javascript" src="/vendor/introjs/intro.min.js" defer></script>
