--- a/views/account/notification.hbs
+++ b/views/account/notification.hbs
@@ -2,20 +2,19 @@
 <div class="notification-settings">
 	<h4>Benachrichtigungseinstellungen</h4>
 	<div class="notification">
-		<div class="row-push-loading row">
+		<div class="row-push-loading">
 			<div class="col-md-12">
-				<div class="form-group"><i class="fa fa-spinner fa-spin"></i></div>
+				<div class="form-group"><i class="fa fa-spinner fa-spin"></i> <span class="notificationStatusInfo">Einstellungen werden geladen...</span></div>
 			</div>
 		</div>
-		<div class="form-group btn-push-disabled row">
+		<div class="form-group btn-push-disabled row-push-disabled hidden">
 			<div class="col-md-6">
-				<button type="button" class="btn btn-default btn-block btn-device" onclick="requestPushPermission()">
-					<i class="fa fa-bell"></i>
-					Benachrichtigungen aktivieren
+				<button type="button" class="btn btn-default btn-block btn-device" id="btn-enable-push" onclick="requestPushPermission()">
+					<span class="disabled"><i class="fa fa-bell"></i> Benachrichtigungen aktivieren</span>
 				</button>
 			</div>
 		</div>
-		<div class="form-group btn-push-enabled row">
+		<div class="form-group btn-push-enabled row-push-enabled hidden">
 			<div class="col-md-6">
 				<button type="button" class="btn btn-default btn-block btn-device" onclick="requestDisablePush()">
 					<i class="fa fa-bell-slash"></i>
