add error message in unsupported browser like safari

--- a/views/account/notification.hbs
+++ b/views/account/notification.hbs
@@ -6,7 +6,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="form-group">
-						<i class="fa fa-spinner fa-spin"></i>
+						<i class="fa fa-spinner fa-spin" id="notificationInit"></i>
+						<i class="fa fa-exclamation-triangle hidden" id="notificationError"></i>
 						<span class="notificationStatusInfo">Einstellungen werden geladen...</span></div>
 				</div>
 			</div>
