integrate pdf in n21 and schulcloud

--- a/theme/n21/views/imprint/imprint.hbs
+++ b/theme/n21/views/imprint/imprint.hbs
@@ -377,6 +377,9 @@ Daten über die Nutzung digitaler Angebote (bspw. Testfragen) können von den
 Inhalte-Anbietern anonymisiert ausgewertet und zur Verbesserung ihrer Inhalte
 und Produkte eingesetzt werden.</span></p>
 
+<p class=MsoNormal style='margin-bottom:12.0pt;line-height:normal'><span
+style='font-size:12.0pt;color:#373A3C'>Ein Verzeichnis aller Empfänger personenbezogener Daten finden Sie <a href="/other/pdf/Empfänger_personenbezogene_Daten.pdf">hier</a>.</span></p>
+
 <p class=MsoNormal style='margin-bottom:6.0pt;line-height:16.5pt'><b><span
 style='font-size:15.0pt;color:#373A3C'>8. Ihre Rechte</span></b></p>
 
