--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -24,12 +24,12 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
             <label>Vorname: <sup>*</sup></label>
-            <input class="form-control linked" name="firstName" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise, keine Spitznamen" 
+            <input class="form-control linked" name="firstName" type="text" placeholder="Vorname des Kindes in offizieller Schreibweise, keine Spitznamen"
               value="{{user.firstName}}" required {{#if user.firstName}}readonly{{/if}} />
           </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Nachname: <sup>*</sup></label>
-            <input class="form-control linked" name="lastName" type="text"  placeholder="Nachname des Kindes" 
+            <input class="form-control linked" name="lastName" type="text"  placeholder="Nachname des Kindes"
               value="{{user.lastName}}" required {{#if user.lastName}}readonly{{/if}}/>
           </div>
         </div>
@@ -37,13 +37,13 @@
         <div class="form-group">
           <label>Geburtsdatum des Schülers: <sup>*</sup></label>
           <input class="form-control linked" name="birthDate" type="text"
-            data-date data-min-date="{{datePickerTodayMinus 18 0 -1}}" data-max-date="{{datePickerTodayMinus 4 0 0}}" 
+            data-date data-min-date="{{datePickerTodayMinus 18 0 -1}}" data-max-date="{{datePickerTodayMinus 4 0 0}}"
             value="{{#if user.birthday}}{{dateToPicker user.birthday}}{{else}}{{datePickerTodayMinus 16 0 0 "DD.MM.YYYY"}}{{/if}}" autocomplete="off" required {{#if user.birthday}}readonly{{/if}}/>
         </div>
 
         <div class="form-group">
           <label>E-Mail-Adresse des Schülers: * <small>(Schüler benötigen eine eigene E-Mail-Adresse)</small></label>
-          <input class="form-control linked" name="email" type="email" placeholder="schueler@schul-cloud.org" 
+          <input class="form-control linked" name="email" type="email" placeholder="schueler@schul-cloud.org"
             value="{{user.email}}" required {{#if user.email}}readonly{{/if}} />
         </div>
         <p class="explanation nomargin">
@@ -99,7 +99,7 @@
         <p>Bitte bestätigen Sie folgende Einwilligungserklärungen, damit Ihr Kind die Vorteile der {{theme.short_title}} nutzen kann:</p>
         <p>Ich, <b data-from="parent_firstName"></b> <b data-from="parent_lastName"></b>, bin erziehungsberechtigt für
           <b data-from="firstName"></b>
-          <b data-from="lastName"></b> 
+          <b data-from="lastName"></b>
         und erkläre Folgendes:</p>
           {{#embed "registration/forms/einwilligungserklaerung"}}{{/embed}}
       </section>
@@ -120,7 +120,7 @@
 
       <section data-panel="section-5">
         <h4>Vielen Dank für die Registrierung in der {{theme.short_title}}</h4>
-      {{#if sso}}
+      {{#if user.sso}}
               <p>Der SSO-Account Ihres Kindes ist jetzt freigeschaltet.</p>
       {{else}}
         <div>
