Creation an edit possibilities

--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -93,9 +93,9 @@
                         <button type="submit" class="btn btn-primary btn-add-modal ">
                             System hinzufügen
                         </button>
-                        <!--<button type="submit" class="btn btn-primary">
+                        <button type="submit" class="btn btn-primary">
                                 LDAP System hinzufügen
-                            </button>-->
+                        </button>
                     </form>
                 </div>
             </div>
