--- a/views/administration/forms/form-ldap-edit.hbs
+++ b/views/administration/forms/form-ldap-edit.hbs
@@ -1,5 +1,9 @@
-<input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
-<input type="hidden" name="_id" value="{{class._id}}" />
+<input name="systemId" type="hidden" data-force-value="true" value="{{system._id}}" />
+
+<div class="form-group">
+    <label>Alias</label>
+    <input class="form-control linked" name="ldapalias" type="text" placeholder="" value="{{system.alias}}"/>
+</div>
 
 <div class="form-group">
     <label>Typ</label>
@@ -12,36 +16,36 @@
 
 <div class="form-group">
     <label>URL</label>
-    <input class="form-control linked" name="ldapurl" type="text" placeholder="ldaps://" value=""/>
+    <input class="form-control linked" name="ldapurl" type="text" placeholder="ldaps://" value="{{system.ldapConfig.url}}"/>
 </div>
 
 <div class="form-group">
     <label>root-Pfad <i class="fa fa-question-circle"></i></label>
-    <input class="form-control linked" name="rootpath" type="text" value=""/>
+    <input class="form-control linked" name="rootpath" type="text" value="{{system.ldapConfig.rootPath}}"/>
 </div>
 
 <div class="form-group">
     <label>search-Nutzer <i class="fa fa-question-circle"></i></label>
-    <input class="form-control linked" name="searchuser" type="text" value=""/>
+    <input class="form-control linked" name="searchuser" type="text" value="{{system.ldapConfig.searchUser}}"/>
 </div>
 
 <div class="form-group">
     <label>search-Nutzer Passwort</label>
-    <input class="form-control linked" name="searchuserpassword" type="password" value=""/>
+    <input class="form-control linked" name="searchuserpassword" type="password" value="{{system.ldapConfig.searchUserPassword}}"/>
 </div>
 
 <div class="form-group">
     <label>Nutzer-Pfad <i class="fa fa-question-circle"></i></label>
-    <input class="form-control linked" name="userpath" type="text" value=""/>
+    <input class="form-control linked" name="userpath" type="text" value="{{system.ldapConfig.providerOptions.userPathAdditions}}"/>
 </div>
 
 <div class="form-group">
     <label>Rollen-Typ <i class="fa fa-question-circle"></i></label>
     <select class="linked" id="select-roletype" name="roletype" data-linktext data-placeholder="LDAP-Typ auswählen">
-            <option value="text">
+            <option value="text" {{#ifeq system.ldapConfig.providerOptions.roleType "text"}}selected="selected"{{/ifeq}}>
                 Nutzer-Attribut
             </option>
-            <option value="group">
+            <option value="group" {{#ifeq system.ldapConfig.providerOptions.roleType "group"}}selected="selected"{{/ifeq}}>
                 LDAP-Gruppe
             </option>
     </select>
@@ -59,37 +63,37 @@
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
         <label>Vorname</label>
-        <input class="form-control linked user-attribute" disabled name="givenName" type="text" value=""/>
+        <input class="form-control linked user-attribute" disabled name="givenName" type="text" value="{{system.ldapConfig.providerOptions.userAttributeNameMapping.givenName}}"/>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
         <label>Nachname</label>
-        <input class="form-control linked user-attribute" disabled name="sn" type="text" value=""/>
+        <input class="form-control linked user-attribute" disabled name="sn" type="text" value="{{system.ldapConfig.providerOptions.userAttributeNameMapping.sn}}"/>
     </div>
 </div>
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
         <label>Domainname</label>
-        <input class="form-control linked user-attribute" disabled name="dn" type="text" value=""/>
+        <input class="form-control linked user-attribute" disabled name="dn" type="text" value="{{system.ldapConfig.providerOptions.userAttributeNameMapping.dn}}"/>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
         <label>uid <i class="fa fa-question-circle"></i></label>
-        <input class="form-control linked user-attribute" disabled name="uid" type="text" value=""/>
+        <input class="form-control linked user-attribute" disabled name="uid" type="text" value="{{system.ldapConfig.providerOptions.userAttributeNameMapping.uid}}"/>
     </div>
 </div>
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
         <label>uuid <i class="fa fa-question-circle"></i></label>
-        <input class="form-control linked user-attribute" disabled name="uuid" type="text" value=""/>
+        <input class="form-control linked user-attribute" disabled name="uuid" type="text" value="{{system.ldapConfig.providerOptions.userAttributeNameMapping.uuid}}"/>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
         <label>E-Mail</label>
-        <input class="form-control linked user-attribute" disabled name="mail" type="text" value=""/>
+        <input class="form-control linked user-attribute" disabled name="mail" type="text" value="{{system.ldapConfig.providerOptions.userAttributeNameMapping.mail}}"/>
     </div>
 </div>
 <div class="row" id="role-name">
     <div class="form-group col-sm-6 col-xs-12">
         <label>Rolle <i class="fa fa-question-circle"></i></label>
-        <input class="form-control linked user-attribute" disabled name="role" type="text" value=""/>
+        <input class="form-control linked user-attribute" disabled name="role" type="text" value="{{system.ldapConfig.providerOptions.userAttributeNameMapping.role}}"/>
     </div>
 </div>
 
@@ -105,30 +109,33 @@
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
         <label>Student</label>
-        <input class="form-control linked role-attribute" disabled name="studentrole" type="text" value=""/>
+        <input class="form-control linked role-attribute" disabled name="studentrole" type="text" value="{{system.ldapConfig.providerOptions.roleAttributeNameMapping.roleStudent}}"/>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
         <label>Lehrer</label>
-        <input class="form-control linked role-attribute" disabled name="lehrerrole" type="text" value=""/>
+        <input class="form-control linked role-attribute" disabled name="lehrerrole" type="text" value="{{system.ldapConfig.providerOptions.roleAttributeNameMapping.roleTeacher}}"/>
     </div>
 </div>
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
         <label>Admin</label>
-        <input class="form-control linked role-attribute" disabled name="adminrole" type="text" value=""/>
+        <input class="form-control linked role-attribute" disabled name="adminrole" type="text" value="{{system.ldapConfig.providerOptions.roleAttributeNameMapping.roleAdmin}}"/>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
         <label>keine Schul-Cloud <i class="fa fa-question-circle"></i></label>
-        <input class="form-control linked role-attribute" disabled name="nosc" type="text" value=""/>
+        <input class="form-control linked role-attribute" disabled name="nosc" type="text" value="{{system.ldapConfig.providerOptions.roleAttributeNameMapping.roleNoSc}}"/>
     </div>
 </div>
 
 <hr>
-<label><input name="activate classes" id="select-classes" type="checkbox" checked/> Klassen (optional)</label>
+<label>
+    <input name="activateclasses" id="select-classes" type="checkbox" {{#ifneq system.ldapConfig.providerOptions.classPathAdditions ""}}checked="checked"{{/ifneq}} />
+    Klassen (optional)
+</label>
 <div class="class-settings">
     <div class="form-group">
         <label>Klassen-Pfad <i class="fa fa-question-circle"></i></label>
-        <input class="form-control linked" name="classpath" type="text" value=""/>
+        <input class="form-control linked" name="classpath" type="text" value="{{system.ldapConfig.providerOptions.classPathAdditions}}"/>
     </div>
     <div class="row">
         <div class="form-group col-sm-6 col-xs-12">
@@ -141,17 +148,17 @@
     <div class="row">
         <div class="form-group col-sm-6 col-xs-12">
             <label>Anzeige-Name</label>
-            <input class="form-control linked class-attribute" disabled name="description" type="text" value=""/>
+            <input class="form-control linked class-attribute" disabled name="description" type="text" value="{{system.ldapConfig.providerOptions.classAttributeNameMapping.description}}"/>
         </div>
         <div class="form-group col-sm-6 col-xs-12">
             <label>Domain-Name</label>
-            <input class="form-control linked class-attribute" disabled name="dn" type="text" value=""/>
+            <input class="form-control linked class-attribute" disabled name="dn" type="text" value="{{system.ldapConfig.providerOptions.classAttributeNameMapping.dn}}"/>
         </div>
     </div>
     <div class="row">
         <div class="form-group col-sm-6 col-xs-12">
             <label>Nutzer der Klasse mit vollem Pfad</label>
-            <input class="form-control linked class-attribute" disabled name="uniquemember" type="text" value=""/>
+            <input class="form-control linked class-attribute" disabled name="uniquemember" type="text" value="{{system.ldapConfig.providerOptions.classAttributeNameMapping.uniqueMember}}"/>
         </div>
     </div>
 </div>
