--- a/views/administration/forms/form-ldap-edit.hbs
+++ b/views/administration/forms/form-ldap-edit.hbs
@@ -15,17 +15,17 @@
 </div>
 
 <div class="form-group">
-    <label>URL</label>
+    <label>URL (ldaps ist verpflichtend)</label>
     <input class="form-control linked" name="ldapurl" type="text" placeholder="ldaps://" value="{{system.ldapConfig.url}}"/>
 </div>
 
 <div class="form-group">
-    <label>root-Pfad <i class="fa fa-question-circle"></i></label>
+    <label>root-Pfad <i class="fa fa-question-circle" data-toggle="tooltip" title="Hauptpfad des LDAPs. Normalerweise DC=Domain,DC=Top-Level-Domain"></i></label>
     <input class="form-control linked" name="rootpath" type="text" value="{{system.ldapConfig.rootPath}}"/>
 </div>
 
 <div class="form-group">
-    <label>search-Nutzer <i class="fa fa-question-circle"></i></label>
+    <label>search-Nutzer <i class="fa fa-question-circle" data-toggle="tooltip" title="Voller Benutzername (inkl. root-Pfad) des Nutzers der Zugriff auf alle Nutzerinformationen hat"></i></label>
     <input class="form-control linked" name="searchuser" type="text" value="{{system.ldapConfig.searchUser}}"/>
 </div>
 
@@ -35,12 +35,12 @@
 </div>
 
 <div class="form-group">
-    <label>Nutzer-Pfad <i class="fa fa-question-circle"></i></label>
+    <label>Nutzer-Pfad <i class="fa fa-question-circle" data-toggle="tooltip" title="Relativer Pfad vom rootPath zu dem LDAP-Knoten von dem alle Nutzer erreichbar sind."></i></label>
     <input class="form-control linked" name="userpath" type="text" value="{{system.ldapConfig.providerOptions.userPathAdditions}}"/>
 </div>
 
 <div class="form-group">
-    <label>Rollen-Typ <i class="fa fa-question-circle"></i></label>
+    <label>Rollen-Typ <i class="fa fa-question-circle" data-toggle="tooltip" title="Ist die Nutzerrolle (Lehrer, Schüler) im Nutzerattribut textuell gespeichert oder gibt es eine LDAP-Gruppe für die jeweiligen Nutzerrolle?"></i></label>
     <select class="linked" id="select-roletype" name="roletype" data-linktext data-placeholder="LDAP-Typ auswählen">
             <option value="text" {{#ifeq system.ldapConfig.providerOptions.roleType "text"}}selected="selected"{{/ifeq}}>
                 Nutzer-Attribut
@@ -54,7 +54,7 @@
 <hr>
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
-        <h5>Nutzer-Attribute <i class="fa fa-question-circle" data-toggle="tooltip" title="This symbolizes your being locked inside"></i></h5>
+        <h5>Nutzer-Attribute <i class="fa fa-question-circle" data-toggle="tooltip" title="Geben Sie das Nutzerattribut an, in dem die folgenden Informationen in Ihrem LDAP verfügbar sind"></i></h5>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
         <i id="user-section-toggle" class="fa fa-lock fa-3x"></i>
@@ -72,17 +72,17 @@
 </div>
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
-        <label>Domainname</label>
+        <label>Domainname (Pfad im LDAP)</label>
         <input class="form-control linked user-attribute" readonly name="dn" type="text" value="{{system.ldapConfig.providerOptions.userAttributeNameMapping.dn}}"/>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
-        <label>uid <i class="fa fa-question-circle"></i></label>
+        <label>uid <i class="fa fa-question-circle" data-toggle="tooltip" title="Der spätere Loginname. Muss in ihrem LDAP zur selben Zeit nur einmal vorkommen"></i></label>
         <input class="form-control linked user-attribute" readonly name="uid" type="text" value="{{system.ldapConfig.providerOptions.userAttributeNameMapping.uid}}"/>
     </div>
 </div>
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
-        <label>uuid <i class="fa fa-question-circle"></i></label>
+        <label>uuid <i class="fa fa-question-circle" data-toggle="tooltip" title="Eindeutige nicht veränderbare Nutzer-ID. Darf sich nicht wie die uid (z.B. durch Heirat) ändern"></i></label>
         <input class="form-control linked user-attribute" readonly name="uuid" type="text" value="{{system.ldapConfig.providerOptions.userAttributeNameMapping.uuid}}"/>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
@@ -100,7 +100,8 @@
 <hr>
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
-        <h5 id="headline-role-type">Rollen-Attribute <i class="fa fa-question-circle"></i></h5>
+        <h5 id="headline-role-type">Rollen-Attribute</h5>
+        <i id="description-role-attribute" class="fa fa-question-circle" data-toggle="tooltip" title="Welcher Wert in Ihrem zuvor definierten Rollen-Feld entspricht der genannten Rolle?"></i>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
         <i id="role-section-toggle" class="fa fa-lock fa-3x"></i>
@@ -122,7 +123,7 @@
         <input class="form-control linked role-attribute" readonly name="adminrole" type="text" value="{{system.ldapConfig.providerOptions.roleAttributeNameMapping.roleAdmin}}"/>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
-        <label>keine Schul-Cloud <i class="fa fa-question-circle"></i></label>
+        <label>keine Schul-Cloud <i class="fa fa-question-circle" data-toggle="tooltip" title="Dies ermöglicht es Ihnen, dass Nutzer aus Ihrem LDAP nicht in die Schul-Cloud übertragen werden"></i></label>
         <input class="form-control linked role-attribute" readonly name="noscrole" type="text" value="{{system.ldapConfig.providerOptions.roleAttributeNameMapping.roleNoSc}}"/>
     </div>
 </div>
@@ -134,12 +135,12 @@
 </label>
 <div class="class-settings">
     <div class="form-group">
-        <label>Klassen-Pfad <i class="fa fa-question-circle"></i></label>
+        <label>Klassen-Pfad <i class="fa fa-question-circle" data-toggle="tooltip" title="Relativer Pfad vom rootPath zu dem LDAP-Knoten von dem alle Klassen erreichbar sind"></i></label>
         <input class="form-control linked" name="classpath" type="text" value="{{system.ldapConfig.providerOptions.classPathAdditions}}"/>
     </div>
     <div class="row">
         <div class="form-group col-sm-6 col-xs-12">
-            <h5>Klassen-Attribute <i class="fa fa-question-circle"></i></h5>
+            <h5>Klassen-Attribute <i class="fa fa-question-circle" data-toggle="tooltip" title="Geben Sie das Klassenattribut an, in dem die folgenden Informationen in Ihrem LDAP verfügbar sind"></i></h5>
         </div>
         <div class="form-group col-sm-6 col-xs-12">
             <i id="class-section-toggle" class="fa fa-lock fa-3x"></i>
