--- a/views/administration/ldap-edit.hbs
+++ b/views/administration/ldap-edit.hbs
@@ -10,9 +10,26 @@
 Probably delete it.--}}
 <!-- dataprivacy is only used for .recap -->
 <link rel="stylesheet" href="/styles/administration/dataprivacy.css" />
+<link rel="stylesheet" href="/styles/help/help.css" />
 {{/content}}
 
 {{#content "page"}}
+<div class="icon-card " id="sprachhinweis">
+    <div class="icon-card__content">
+        <a class="icon-card__icon" tabindex="-1">
+            <i class="fa fa-fw fa-lightbulb-o" aria-hidden="true"></i>
+        </a>
+        <h4 class="icon-card__title">Wichtiger Hinweis</h4>
+        <div class="icon-card__body">
+            <p>
+                Jegliche Änderungen an der folgenden Konfiguration kann zur Folge haben, dass der Login für Sie und
+                alle Nutzer Ihrer Schule nicht mehr funktioniert. Daher nehmen Sie nur Änderungen vor, wenn Ihnen die
+                Konsequenzen bewusst sind. Einige Bereiche sind nur lesbar. Sie können die Angaben allerdings
+                editierbar machen, wenn Sie auf das Schloss im jeweiligen Bereichs klicken.
+            </p>
+        </div>
+    </div>
+</div>
 <section class="section-classes-create">
     <form class="create-form" id="ldap-form" method="post" action="">
         {{> "administration/forms/form-ldap-edit"}}
@@ -21,11 +38,23 @@ Probably delete it.--}}
 <section id="verifyarea" style="display:none;">
     <h5>Nutzer: <a href="#" id="usertoggle">Ausblenden</a></h5>
     <table class="table table-hover table-bordered" id="userTable" border="1">
-        <tr><th>Vorname</th><th>Nachname</th><th>E-Mail</th><th>uid</th><th>Rolle(n)</th><th>Domainname</th><th>uuid</th></tr>
+        <tr>
+            <th>Vorname</th>
+            <th>Nachname</th>
+            <th>E-Mail</th>
+            <th>uid</th>
+            <th>Rolle(n)</th>
+            <th>Domainname</th>
+            <th>uuid</th>
+        </tr>
     </table>
     <h5>Klassen: <a href="#" id="classtoggle">Ausblenden</a></h5>
     <table class="table table-hover table-bordered" id="classTable" border="1">
-        <tr><th>Name</th><th>Domain</th><th>Nutzer der Klasse</th></tr>
+        <tr>
+            <th>Name</th>
+            <th>Domain</th>
+            <th>Nutzer der Klasse</th>
+        </tr>
     </table>
 </section>
 {{/content}}
