--- a/views/content/forms/form-add-lesson.hbs
+++ b/views/content/forms/form-add-lesson.hbs
@@ -1,11 +1,11 @@
 <div class="form-group">
-    <label for="courseId">Wählen Sie einen Kurs / Fach</label>
+    <label for="courseId">Wähle einen Kurs / Fach</label>
     <select class="course-selection form-control" name="courseId" required="required">
         <option value="" selected hidden>Wähle...</option>
     </select>
 </div>
 <div class="form-group lessons" style="display: none">
-    <label for="name">Wählen Sie ein Unterrichtsthema</label>
+    <label for="name">Wähle ein Unterrichtsthema</label>
     <select class="lesson-selection form-control" name="lessonId" required="required">
     </select>
 </div>
