--- a/views/files/forms/form-move.hbs
+++ b/views/files/forms/form-move.hbs
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label>Wählen Sie einen Ordner aus</label>
+    <label>Wähle einen Ordner aus</label>
     <div class="directories-tree">
         <!-- rendered in scripts/files.js -->
     </div>
