--- a/views/files/forms/form-name-edit.hbs
+++ b/views/files/forms/form-name-edit.hbs
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <label>Wählen Sie einen neuen Namen aus:</label>
+    <label>Wähle einen neuen Namen aus:</label>
     <input class="form-control" name="name" type="text" />
 </div>
 
