--- a/views/files/forms/form-new-file.hbs
+++ b/views/files/forms/form-new-file.hbs
@@ -1,7 +1,7 @@
 <div class="form-group">
-    <label>Wählen Sie einen Namen und eine Dateiendung aus:</label>
+    <label>Wähle einen Namen und eine Dateiendung aus:</label>
     <br />
-    
+
     <label for="file-ending">Dateityp:</label>
     <select class="custom-select mr-sm-2 form-control" id="file-ending">
         <option selected>Format auswählen</option>
