--- a/views/administration/forms/form-import.hbs
+++ b/views/administration/forms/form-import.hbs
@@ -30,5 +30,5 @@
         {{/each}}
         <option value="">Anderes</option>
     </select>
-    <p>Falls Sie ihr derzeitiges System nicht in der Liste unterstützter Systeme finden, wählen Sie bitte "Anderes".</p>
+    <p>Falls du dein derzeitiges System nicht in der Liste unterstützter Systeme finden, wähle bitte "Anderes".</p>
 </div>
