make system overview editable for ldaps and show ldap system label remove url from system overview loading animation for verifying ldaps

--- a/views/administration/forms/form-ldap-edit.hbs
+++ b/views/administration/forms/form-ldap-edit.hbs
@@ -166,6 +166,9 @@
 
 <div class="modal-footer mt-1">
     <a href="/administration/systems" class="btn btn-secondary">Abbrechen</a>
-    <button id="verify" class="btn btn-primary">Verifizieren</button>
+    <button id="verify" class="btn btn-primary">
+        <i id="verify-icon"></i>
+        Verifizieren
+    </button>
     <button id="savesubmit" class="btn btn-secondary" disabled>Änderungen speichern</button>
 </div>
