Fix general description for admins fix issue with dynamic tooltip for role description

--- a/views/administration/ldap-edit.hbs
+++ b/views/administration/ldap-edit.hbs
@@ -25,7 +25,9 @@ Probably delete it.--}}
                 Jegliche Änderungen an der folgenden Konfiguration kann zur Folge haben, dass der Login für Sie und
                 alle Nutzer Ihrer Schule nicht mehr funktioniert. Daher nehmen Sie nur Änderungen vor, wenn Ihnen die
                 Konsequenzen bewusst sind. Einige Bereiche sind nur lesbar. Sie können die Angaben allerdings
-                editierbar machen, wenn Sie auf das Schloss im jeweiligen Bereichs klicken.
+                editierbar machen, wenn Sie auf das Schloss im jeweiligen Bereichs klicken. Nach jeder Verifizierung
+                wird Ihr System aktualisiert und ersteinmal auf deaktiviert gesetzt. Vergessen Sie daher nicht die
+                Änderungen final zu speichern, wenn die Verifizierung erfolgreich war.
             </p>
         </div>
     </div>
