--- a/views/administration/forms/form-ldap-edit.hbs
+++ b/views/administration/forms/form-ldap-edit.hbs
@@ -101,7 +101,7 @@
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
         <h5 id="headline-role-type">Rollen-Attribute</h5>
-        <i id="description-role-attribute" class="fa fa-question-circle" data-toggle="tooltip" title="Welcher Wert in Ihrem zuvor definierten Rollen-Feld entspricht der genannten Rolle?"></i>
+        <i id="description-role-attribute" class="fa fa-question-circle" data-toggle="tooltip" data-original-title="Welcher Wert in Ihrem zuvor definierten Rollen-Feld entspricht der genannten Rolle?"></i>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
         <i id="role-section-toggle" class="fa fa-lock fa-3x"></i>
